--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     const coinSpawnInterval = 2000;
 
     const coinImg = new Image();
-    coinImg.src = "83c8414c-ef66-4ec3-8fcb-621cb5ab71b7.png";
+    coinImg.src = "83c8414c-ef66-4ec3-8fcb-621cb5ab71b7.jpg";
 
     const carImg = new Image();
     carImg.src = "123123456.png";
